--- a/Python_for_Data_Analytics.ipynb
+++ b/Python_for_Data_Analytics.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOv9btDej1iTVLC08psKFvH",
+      "authorship_tag": "ABX9TyN/JNZQqHQz+HH79a5HB4EL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -860,24 +860,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "aL3WeBRPw5Jx"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "ENMefRqzw5Os"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "# Loops and Iteration"
@@ -888,17 +870,412 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "In Python, loops are used for repetitive execution of a block of code. They allow you to iterate over a sequence or repeat a set of instructions until a certain condition is met. This is particularly useful in data analytics when you need to process large amounts of data or perform repetitive tasks efficiently.\n",
+        "\n",
+        "Let's explore the two main types of loops in Python: for loops and while loops.\n",
+        "\n",
+        "For Loop:\n",
+        "A for loop iterates over a sequence (such as a list, tuple, or string) or any iterable object. It executes a block of code for each element in the sequence."
+      ],
       "metadata": {
         "id": "tR_AIIK5uxii"
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "fruits = [\"apple\", \"banana\", \"orange\"]\n",
+        "\n",
+        "for fruit in fruits:\n",
+        "    print(fruit)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "sD6RUi7-yZaH",
+        "outputId": "b0fc1fb6-da8d-4565-f22c-a0d34d06bcb8"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "apple\n",
+            "banana\n",
+            "orange\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "In this example, the for loop iterates over the \"fruits\" list and prints each fruit on a separate line.\n",
+        "Note that you can use any other word instead of 'fruit' and it will still work."
+      ],
       "metadata": {
         "id": "NtTkCQpluxmr"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "fruits = [\"apple\", \"banana\", \"orange\"]\n",
+        "\n",
+        "for i in fruits:\n",
+        "    print(i)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JgN2z6mHygUN",
+        "outputId": "b1956887-2196-44cc-9c42-286dbeb0fb2f"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "apple\n",
+            "banana\n",
+            "orange\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "But remember that it is always advisable to use variable name that is easier to read and understand."
+      ],
+      "metadata": {
+        "id": "OXfICn2cyu5g"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for i in range(5):\n",
+        "    print(i)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "U8RQJ9Nmyr7M",
+        "outputId": "a11b2d7c-5b91-4731-b77d-35faaa6d7572"
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0\n",
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Here, the for loop uses the range() function to generate a sequence of numbers from 0 to 4. It then prints each number in the sequence.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "Let's read a little about range() function and then we will come back to this.\n",
+        "In Python, the range() function is used to generate a sequence of numbers. It provides a convenient way to iterate over a specific range of values or create a sequence of numbers that can be used in various programming contexts.\n",
+        "\n",
+        "The range() function takes up to three arguments: start, stop, and step. Here's a brief explanation of each argument:\n",
+        "\n",
+        "start (optional): Specifies the starting value of the sequence (inclusive). If omitted, it defaults to 0.\n",
+        "\n",
+        "stop: Specifies the ending value of the sequence (exclusive). It does not include this value in the generated sequence.\n",
+        "\n",
+        "step (optional): Specifies the difference between each consecutive number in the sequence. If omitted, it defaults to 1.\n",
+        "\n",
+        "The range() function returns an iterable object that can be used in a for loop, converted to a list, or utilized in other iterable-related operations.\n",
+        "\n",
+        "Example 1:"
+      ],
+      "metadata": {
+        "id": "IemCf3SUy6vM"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for num in range(5):\n",
+        "    print(num)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "C2T08tJjy2IL",
+        "outputId": "3e3c03fb-0d20-4c59-eb32-3cfff8f769e0"
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0\n",
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for num in range(1, 10, 2):\n",
+        "    print(num)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MGD4LN7lzrnj",
+        "outputId": "0d378b45-f29f-46fc-fb78-66665e19ce1c"
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "3\n",
+            "5\n",
+            "7\n",
+            "9\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Here, the range(1, 10, 2) generates a sequence of odd numbers from 1 to 9. The for loop iterates over this sequence, and each odd number is printed.\n",
+        "\n",
+        "The range() function is useful in various scenarios, such as when you need to iterate a specific number of times, generate indices for list operations, or create a custom numerical sequence.\n",
+        "\n",
+        "---\n",
+        "Let's come back to our old topic of loops and iterations.\n"
+      ],
+      "metadata": {
+        "id": "ywql-PURz0hN"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "While Loop:\n",
+        "A while loop executes a block of code as long as a certain condition is true. It repeats the code until the condition becomes false."
+      ],
+      "metadata": {
+        "id": "wg6eknZm0AZp"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "count = 0\n",
+        "\n",
+        "while count < 5:\n",
+        "    print(count)\n",
+        "    count += 1"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "i9CVPQjuzv6a",
+        "outputId": "7f3607aa-a553-4f91-827f-876fc6942a32"
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0\n",
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "In this example, the while loop prints the value of \"count\" and increments it by 1 in each iteration, until the condition count < 5 becomes false."
+      ],
+      "metadata": {
+        "id": "-tY5-REV0SQ5"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "num = 10\n",
+        "\n",
+        "while num > 0:\n",
+        "    print(num)\n",
+        "    num -= 2"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bxp4NBZC0Nw0",
+        "outputId": "badb0aaf-4e5b-4337-b6dd-25bb925f6f38"
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "10\n",
+            "8\n",
+            "6\n",
+            "4\n",
+            "2\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Here, the while loop prints the value of \"num\" and subtracts 2 from it in each iteration, until \"num\" becomes less than or equal to 0.\n",
+        "\n",
+        "((Note that here `num -= 2` simply means `num = num - 2`, which updates the num variable in each iteration))."
+      ],
+      "metadata": {
+        "id": "WPY_j1FS0Uaa"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "students = [\n",
+        "    {\"name\": \"John\", \"age\": 25},\n",
+        "    {\"name\": \"Alice\", \"age\": 22},\n",
+        "    {\"name\": \"Mark\", \"age\": 28}\n",
+        "]\n",
+        "\n",
+        "for student in students:\n",
+        "    if student[\"age\"] >= 25:\n",
+        "        print(student[\"name\"])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UZu9XGnR1K0o",
+        "outputId": "6625bca3-ab37-4a2f-a9aa-6c1ba9a7704e"
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "John\n",
+            "Mark\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The for loop iterates over the \"students\" list of dictionaries. It checks the age of each student and prints the name of students who are 25 years or older."
+      ],
+      "metadata": {
+        "id": "CDQB2bIH1P_H"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "num = 10\n",
+        "\n",
+        "while num > 0:\n",
+        "    print(num)\n",
+        "    if num == 5:\n",
+        "        break\n",
+        "    num -= 1"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4w-84a2f1Lkr",
+        "outputId": "9891591e-2608-48ab-c8fd-6f6558f5cd98"
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "10\n",
+            "9\n",
+            "8\n",
+            "7\n",
+            "6\n",
+            "5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The while loop prints the value of \"num\" and stops when \"num\" becomes 5, using the break statement to exit the loop prematurely.\n",
+        "\n",
+        "Loops and iteration are powerful concepts in Python that allow you to automate repetitive tasks, iterate over data, and process information efficiently."
+      ],
+      "metadata": {
+        "id": "SkMGZhMg1YnH"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# New section"
+      ],
+      "metadata": {
+        "id": "GEKSGzrc1yYH"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "ffD-WUwR1YGi"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
